# BrowserX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Deno.json  LICENSE  README.md
crates/pixpane/: BINDINGS.md  Cargo.toml  README.md  build.rs  debug_bindgen.ts  gen_bindings.ts  pixpane.ts  test.ts  test_animation.ts  test_browser_chrome.ts  test_egui_button.ts  test_event_driven.ts  test_pixels.ts  test_render.ts  test_vsync.ts
crates/pixpane/bindings/: bindings.ts
crates/pixpane/docs/api/: index.md
crates/pixpane/docs/examples/: index.md
crates/pixpane/docs/guides/: index.md
crates/pixpane/src/: deno_bindings.rs  lib.rs
crates/pixpane/src/os/: mod.rs  osdetect.rs
crates/pixpane/src/os/linux/: helper.rs  linux.rs  mod.rs
crates/pixpane/src/os/macos/: helper.rs  macos.rs  mod.rs
crates/pixpane/src/os/windows/: helper.rs  mod.rs  windows.rs
crates/pixpane/src/rendering/: egui_state.rs  mod.rs  renderer.rs  shaders.rs  texture.rs  wgpu_state.rs
crates/pixpane/src/utils/: hash.rs  mod.rs
crates/pixpane/src/window/: base.rs  builder.rs  event.rs  mod.rs  opener.rs  system.rs
crates/pixpane/tests/: test_60fps.ts  test_all_egui_methods.ts  test_context_menu.ts  test_true_60fps.ts
crates/webgpu_x/: BINDINGS.md  Cargo.toml  deno.json  fix_bindings.ts  gen_bindings.ts  test_shader.ts  webgpu_x.ts
crates/webgpu_x/bindings/: bindings.ts
crates/webgpu_x/src/: deno_bindings.rs  error.rs  lib.rs  mod.rs
crates/webgpu_x/src/compute/: kernel.rs  mod.rs  templates.rs  workgroup.rs
crates/webgpu_x/src/descriptors/: mod.rs  validator.rs
crates/webgpu_x/src/framework/: device.rs  mod.rs
crates/webgpu_x/src/gpu/: detection.rs  limits.rs  mod.rs
crates/webgpu_x/src/gpu/non_vendor/: mod.rs  opencl.rs  vulkan.rs
crates/webgpu_x/src/memory/: buddy_allocator.rs  buffer_init.rs  buffer_pool.rs  mod.rs  staging_belt.rs
crates/webgpu_x/src/os/: darwin.rs  linux.rs  mod.rs  windows.rs
crates/webgpu_x/src/pipeline/: cache.rs  mod.rs
crates/webgpu_x/src/shader/: compilation.rs  mod.rs
crates/webgpu_x/src/tensor/: mod.rs  storage.rs
crates/webgpu_x/src/texture/: mod.rs  utilities.rs
crates/webgpu_x/src/utilities/: detect.rs  find.rs  mod.rs  serialize.rs
crates/webgpu_x/src/web/: mod.rs
crates/webgpu_x/tests/: test.ts  test_framework.ts  test_kernel.ts  test_tensor.ts
(+624 files in other folders)
