[package]
name = "webgpu_x"
version = "0.1.0"
edition = "2021"
authors = ["layerdynamics"]
license = "MIT OR Apache-2.0"
description = "Cross-platform WebGPU library for Deno via FFI, that provides utils and processes not covered by deno webgpu"
repository = "https://github.com/layerdynamics/browserx/crates/webgpu_x"
readme = "README.md"
keywords = ["deno", "ffi", "gpu", "webgpu"]
categories = ["webgpu", "bindgen", "os","api-bindings"]

[lib]
name = "webgpu_x"
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
parking_lot = "0.12"
libc = "0.2"

# Webgpu
wgpu = "22"


[build-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
